kustomize/base/assets-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assets
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: assets
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: service
      app.kubernetes.io/name: assets
  template:
    metadata:
      labels:
        app.kubernetes.io/component: service
        app.kubernetes.io/name: assets
    spec:
      containers:
      - name: assets
        image: public.ecr.aws/aws-containers/retail-store-sample-assets:0.7.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            memory: 128Mi
          requests:
            cpu: 64m
            memory: 128Mi
