kustomize/base/checkout-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkout
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: checkout
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: checkout
