kustomize/base/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: ui
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: ui
